--- a/estilos.css
+++ b/estilos.css
@@ -35,4 +35,8 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100px;
+    text-decoration: none;
+    text-align: center;
+    margin: auto;
 }
